首页添加banner广告栏，增加妹子福利图和优化细节

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="transition_photos">transition_animation_news_photos</string>
     <string name="transition_doubanphotos">transition_animation_news_douban_photos</string>
     <string name="artist_pic">animation_artist_photos</string>
+    <string name="transition_girlphotos">transition_animation_girlphotos</string>
 </resources>
